2007-12-28  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_CHECK_HEADERS): Check for
	netinet/in_systm.h, netinet/ip.h and net/if.h 
	for Windows CE.

	* native/jni/java-net/gnu_java_net_VMPlainSocketImpl.c:
	Guard net/if.h include statement. Use unsigned int 
	instead of u_int.

	* native/jni/java-nio/gnu_java_nio_VMChannel.c:
	Guard sys/mman.h include statement.

	* native/jni/java-nio/gnu_java_nio_VMSelector.c:
	Guard sys/select.h include statement.

	* native/jni/java-nio/javanio.c:
	Guard sys/select.h include statement.

	* native/jni/java-nio/javanio.h:
	Include sys/time.h.

	* native/jni/native-lib/cpio.c: 
	Guard chmod call by S_IWRITE, since it's not 
	defined in the arm-wince toolchain.

	* native/jni/native-lib/cpnet.h:
	Guard netinet/in_systm.h and netinet/ip.h 
	include statements.
	
2007-12-28  Dalibor Topic  <robilad@kaffe.org>

	* m4/acinclude.m4 (CLASSPATH_WITH_GLIBJ): Use
	AC_PATH_PROGS instead of AC_PATH_PROG to check
	for FASTJAR as fastjar, gjar or jar. Add braces
	to AC_PATH_PROGS arguments.

	* tools/Makefile.am (TOOLS_ZIP),
	lib/Makefile.am (collections.jar, glibj.zip): 
	Quote FASTJAR in case it's in a path with 
	whitespace.

2007-12-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        PR classpath/34580:
	* java/awt/Desktop.java:
	(isDesktopSupported()): Made public.
	
2007-12-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        PR classpath/34577:
	* javax/swing/JFrame.java:
	(addImpl(Component,Object,int)): Add a similar
	check for the root pane as in remove, adding using
	the superclass when this occurs rather than the
	content pane.
	
2007-12-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        PR classpath/34576:
	* java/awt/Container.java:
	(isAncestorOf(Component)): Swap ordering so that
	the parent is retrieved prior to checking against 
	this, thus preventing a component being an ancestor of
	itself.

2007-12-11  Robert Schuster  <robertschuster@fsfe.org>

  * AUTHORS: Added my name to the list.
