@@ -1,3 +1,9 @@
+2007-12-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+        PR classpath/34582:
+	* javax/rmi/ssl/SslRMIClientSocketFactory.java:
+	(getProp(String)): Check for the property being null.
+	
 2007-12-28  Dalibor Topic  <robilad@kaffe.org>
 
 	* configure.ac (AC_CHECK_HEADERS): Check for
